# drunce

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  cards.cpp  cards.h  main.cpp  seedGen.cpp  seedGen.h
src/ai/: CMakeLists.txt  ai.cpp  ai.h
src/card/: CMakeLists.txt  card.h  cards_type.h
src/core/: CMakeLists.txt
src/core/ai_logic/: CMakeLists.txt  ai_logic.cpp  ai_logic.h
src/core/card/: CMakeLists.txt  card.cpp  card.h
src/core/core_definitions/: CMakeLists.txt  card_definitions.h  deck_definitions.h  engine_definitions.h  hand_definitions.h  player_definitions.h
src/core/deck_handler/: CMakeLists.txt  deck_handler.cpp  deck_handler.h
src/core/engine/: CMakeLists.txt  engine.cpp  engine.h
src/core/generator/: generator.cpp  generator.h
src/core/hand/: CMakeLists.txt  hand.cpp  hand.h
src/core/player/: CMakeLists.txt  player.cpp  player.h
src/deck/: deck.cpp  deck.h
src/engine/: engine_types.h
src/formatting/: CMakeLists.txt  colors.h  special_characters.h
src/generator/: CMakeLists.txt  generator.cpp  generator.h
src/hand/: CMakeLists.txt  hand.cpp  hand.h
